--- a/index.html
+++ b/index.html
@@ -5,26 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ori Marx Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1 class="typed-text"></h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="header-content">
+            <h1 class="typed-text"></h1>
+            <p class="sub-title">High School Student | Aspiring Software Engineer | Tech Enthusiast</p>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <section id="about">
+    <section id="about" class="section">
         <h2>About Me</h2>
-        <p>I'm Ori Marx, a high school student passionate about technology and computer science. I thrive on solving problems and building innovative solutions that can make a positive impact.</p>
+        <p>I'm Ori Marx, a high school student with a deep passion for technology, particularly in computer science and computer engineering. My journey began with a fascination for problem-solving, leading me to excel in application programming, software engineering, and data analysis. I thrive on challenges and am committed to leveraging my skills to innovate and create positive change in the world.</p>
     </section>
 
-    <section id="skills">
+    <section id="skills" class="section">
         <h2>Technical Skills</h2>
         <div class="skill-bars">
             <div class="skill">
@@ -46,22 +51,39 @@
         </div>
     </section>
 
-    <section id="experience">
+    <section id="experience" class="section">
         <h2>Experience</h2>
         <div class="experience-card">
-            <h3>CEO, classCalendar LLC</h3>
-            <p>Managing Full-Stack Development and leading a social media-driven user installation strategy.</p>
+            <h3>Chief Executive Officer | Board President, classCalendar LLC</h3>
+            <p>Owning 25% of the company with an expected annual revenue of $40K. Managing full-stack code development, leading social media campaigns, and implementing an ad network with an average eCPM equaling $10.50.</p>
+        </div>
+        <div class="experience-card">
+            <h3>Vice President of STEAM | Member, Computer Science Club</h3>
+            <p>Attending weekly meetings, learning about aspects of employment in the field of computer science, and leading the annual VHHS STEAM Showcase.</p>
         </div>
         <div class="experience-card">
             <h3>Intern, printpal.io</h3>
-            <p>Collaborated on 3D-Printing object detection and became proficient in several Python libraries.</p>
+            <p>Obtained mastery of several Python libraries and became proficient in ML engineering for 3D-Printing object detection. Collaborated with the CEO and other interns to produce thousands of lines of functioning code.</p>
         </div>
     </section>
 
-    <section id="contact">
+    <section id="education" class="section">
+        <h2>Education</h2>
+        <div class="education-card">
+            <h3>Vernon Hills High School, Vernon Hills, IL</h3>
+            <p>Expected Graduation: May 2025</p>
+            <p>Unweighted GPA: 4.0, Weighted GPA: 4.43</p>
+            <p>Relevant Coursework: AP Computer Science Principles, AP Computer Science A, Data Structures & Algorithms @ Illinois Institute of Technology, AP Physics 1, AP Physics C - Mechanics / Electricity & Magnetism, AP Calculus BC, AP Statistics</p>
+            <p>Relevant Awards: D128 STEAM Showcase - 1st Place Entrepreneurship Division, AP Scholar with Distinction, National Honor Society Member</p>
+        </div>
+    </section>
+
+    <section id="contact" class="section">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:ori.marx@vhhscougars.org">ori.marx@vhhscougars.org</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/ori-m-b008a427b/" target="_blank">https://www.linkedin.com/in/ori-m-b008a427b/</a></p>
+        <p>Phone: (224) 424-9262</p>
+        <p>Location: Vernon Hills, IL, 60061</p>
     </section>
 
     <footer>
