--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <section id="contact" class="section">
         <div class="section-content">
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:orimarx@gmail.com">ori.marx@vhhscougars.org</a></p>
+            <p>Email: <a href="mailto:orimarx@gmail.com">orimarx@gmail.com</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/ori-m-b008a427b/">linkedin.com/in/ori-m-b008a427b/</a></p>
             <p>Location: Vernon Hills, IL, 60061</p>
             <p>Phone: (224) 424-9262</p>
